# Awesome-Simulator

./: .gitignore  README.md  log.txt
data/: S&P500  data.py
gui_server/: .gitignore  READEM.md  README.md  db.sqlite3  manage.py  simulator
gui_server/core/: forms.py  urls.py  utilities.py  views.py
gui_server/core/static/core/: loader.css
gui_server/core/static/core/img/: dummy.txt
gui_server/core/templates/core/: index.html  loader.html  simulation.html  success.html
gui_server/gui_server/: settings.py  urls.py  wsgi.py
simulator/: CMakeLists.txt
simulator/src/: ConfigParser.cpp  ConfigParser.h  Configurations.cpp  Configurations.h  Configurations.ini  Database.cpp  Database.h  Date.cpp  Date.h  DateTime.cpp  DateTime.h  LongShort.cpp  LongShort.h  MessageLog.cpp  MessageLog.h  ModelA.cpp  ModelA.h  Sim.vcxproj  Sim.vcxproj.filters  Simulator.cpp  Simulator.h  TestCode.cpp  TickerData.cpp  TickerData.h  TradingObject.cpp  TradingObject.h  Utilities.cpp  Utilities.h  main.cpp
